--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -279,12 +279,12 @@
   issn       = {2296-9144},
 }
 
-@inproceedings{Cottrell2016TheoreticalAA,
-  author     = {Cottrell, Marie and Olteanu, Madalina and Rossi, Fabrice and Villa-Vialaneix, Nathalie},
-  title      = {Theoretical and Applied Aspects of the Self-Organizing Maps},
-  booktitle  = {{WSOM}},
-  year       = 2016,
-}
+% @inproceedings{Cottrell2016TheoreticalAA,
+%   author     = {Cottrell, Marie and Olteanu, Madalina and Rossi, Fabrice and Villa-Vialaneix, Nathalie},
+%   title      = {Theoretical and Applied Aspects of the Self-Organizing Maps},
+%   booktitle  = {{WSOM}},
+%   year       = 2016,
+% }
 
 @article{Hilgetag2015IsTB,
   author     = {Hilgetag, Claus C. and Goulas, Alexandros},
