chapitre 6, V1 - a relire avant release

--- a/00-Introduction/source.tex
+++ b/00-Introduction/source.tex
@@ -42,8 +42,8 @@ Cette auto-organisation est effectuée de façon décentralisée, via des règle
 D'autre part, les systèmes modulaires présentent des propriétés de robustesse
 \cite{Tang2021ARO}
 Cette démarche d'utilisation de systèmes modulaires décentralisés a été mise en \oe{}uvre dans les algorithmes d'intelligence d'essaim \cite{Bonabeau1999SwarmI}. Ces algorithmes nous motivent également à considérer des architectures modulaires pour l'apprentissage.
-Dans cette thèse, nous nous plaçons ainsi dans une démarche de construction d'un système d'apprentissage~: l'assemblage de module sayant des règles simples d'évolution peut mener à des comportements collectifs plus complexes, dans notre cas en vue d'un apprentissage. Nous savons que chaque module, une carte de Kohonen, est capable d'apprendre une représentation de son espace d'entrée. Nous nous attendons à diversifier les comportements d'apprentissage.
-\cite{chen_modularity_2016}, 
+Dans cette thèse, nous nous plaçons ainsi dans une démarche de construction d'un système d'apprentissage~: l'assemblage de modules ayant des règles simples d'évolution peut mener à des comportements collectifs plus complexes, dans notre cas en vue d'un apprentissage. Nous savons que chaque module, une carte de Kohonen, est capable d'apprendre une représentation de son espace d'entrée. Nous nous attendons à diversifier les comportements d'apprentissage.
+\cite{chen_modularity_2016}
 
 Finalement, la conception d'une architecture modulaire d'apprentissage s'inspire d'une part des propriétés de modularité et d'émergence observées dans différents systèmes naturels en particulier dans le cerveau, et artificiels comme l'intelligence d'essaim ou les réseaux de neurones profonds.
 La propriété de modularité permettrait à une architecture de réaliser des calculs complexes en exploitant la collaboration et l'interaction des modules de façon décentralisée.
@@ -91,3 +91,10 @@ Nous présenterons en particulier un comportement de prédiction d'entrée rendu
 Nous proposons au chapitre~\ref{chap:indicateur} des indicateurs numériques originaux d'évaluation de l'apprentissage associatif par l'architecture de cartes, dans le but d'étendre l'analyse du modèle à des architectures difficilement représentables.
 Le chapitre \ref{chap:analyse2D} étend enfin les observations aux architectures de cartes en deux dimensions, afin de saisir la scalabilité du modèle.
 
+
+
+
+Idées : plutôt se concentrer sur la SOM en elle-même. Champs d'application, performances, remarquer que les SOM ont des performances pour extraire des représentations, inspi biologique
+Voila ce qui n'a pas été réalisé, et voila ce que je propose : injecter de l'information de position 
+démarche synthétique
+caractériser le comportement émergent des cartes.
