--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -4,6 +4,11 @@
 
 - Insister sur l'aspect utilisation de l'organisation topologiquement ordonnée inspirée de la biologie, qui est vraiment implémentée dans cette architecture.
 
+- Plutot axé sur le coté cartes, on envoie une position. Voir manifeste biscuit pour la raiso
+
+Placer plutôt dans architectures cognitives, et mutlimodalités, robot etc.
+
+
 \section*{Discussion}
 
 La thèse que nous avons présentée cherche à créer un modèle d'architecture modulaire non-hiérarchique d'apprentissage non-supervisé, en utilisant des cartes de Kohonen en tant que modules.
