--- a/titlepage.tex
+++ b/titlepage.tex
@@ -6,7 +6,7 @@
 % \President = {Le président &du jury}
 \Rapporteurs = {Madalina Olteanu & Université Paris Dauphine, CEREMADE\\
 Frédéric Alexandre & INRIA Bordeaux Sud-Ouest, Labri\\}
-\Examinateurs = {Matthias Quoy & CY-Université Cergy\\
+\Examinateurs = {Mathias Quoy & CY-Université Cergy\\
 Lydia Boudjeloud-Assala & Université de Lorraine, LORIA}
 \Encadrants = {Hervé Frezza-Buet & CentraleSupelec, LORIA\\
 Yann Boniface & Université de Lorraine, LORIA}
