--- a/04-Representation/source.tex
+++ b/04-Representation/source.tex
@@ -205,8 +205,8 @@ Cette formalisation statistique des entrées et des réponses permettra aussi d'
 \includegraphics[width=0.85\textwidth]{tests_2maps.pdf}
 \caption{Schéma décrivant une étape de test. Un test consiste à présenter successivement des réalisations de $\mathbf{X}$, notées $(\inpx\m{1}_t,\inpx\m{2}_t)$, et à effectuer la recherche de BMU par relaxation.
 Contrairement à une phase d'apprentissage dans laquelle les poids sont mis à jour à partir des valeurs $\bmu_t$ obtenues après relaxation, ici nous considérons simplement les BMUs $\bmu_t\m{1}$ et  $\bmu_t\m{2}$ comme sortie de l'architecture.
-Les poids ne sont pas mis à jour entre chaque itération, ce qui permet de considérer une phase de test comme un échantillonnage de la variable aléatoire $(\inpx\m{1},\inpx\m{2}, U, \bmu\m{1}, \bmu\m{2}$). }
-\label{fig:flowchart}
+Les poids ne sont pas mis à jour entre chaque itération, ce qui permet de considérer une phase de test comme un échantillonnage de la variable aléatoire $(\inpx\m{1},\inpx\m{2}, U, \bmu\m{1}, \bmu\m{2}$).\label{fig:flowchart} }
+
 \end{figure}
 
 \section{Représentations graphiques}
