--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1884,3 +1884,12 @@
   PAGES = {40-49},
   YEAR = {2013}
 }
+
+@article{Fritzke1995GrowingG,
+  title={Growing Grid — a self-organizing network with constant neighborhood range and adaptation strength},
+  author={Bernd Fritzke},
+  journal={Neural Processing Letters},
+  year={1995},
+  volume={2},
+  pages={9-13}
+}
